--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<h1 class="logo">Shophia</h1>
 
 	<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, nobis?</h4>
+	<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, sapiente sint delectus illum repellat voluptatibus.</h2>
 </body>
 </html>
